Formulaires moderation : ajout d'une barre de scroll pour l'affichage des résultat de formulaire. Fixe la derniere colonne pour qu'elle soit toujours visible
git-svn-id: http://afi-forge.afi-sa.fr/svn/opacce/trunk@1212 e3cc70dd-a52f-4065-8a26-0e09943c8c5c

--- a/public/admin/css/global.css
+++ b/public/admin/css/global.css
@@ -929,19 +929,43 @@ div[id^="liste_picto_genre_"]  {
 }
 
 
-
 .subview table#formulaires td {
 		border-left: 1px solid gray;
 		padding-left: 2px;
+		white-space: nowrap;
+		padding: 5px;
 }
 
 
-.subview table#formulaires td:first-child {
+
+.subview table#formulaires tr:hover {
+		background-color: yellow;
+}
+
+
+.subview table#formulaires td:first-child  {
 		border: none;
 }
 
+.subview table#formulaires th:last-child, .subview table#formulaires td:last-child {
+    position: absolute;
+    z-index: 3;
+    right: 0px;
+    vertical-align: middle;
+}
 
 img.article_edit {
 		vertical-align: middle;
 		margin-left: 5px;
+}
+
+
+.subview {
+
+    position: relative;
+}
+
+.table_scroll {
+    margin-right: 50px;
+    overflow: auto;
 }
